# vizier

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAUSALITY_DESIGN.md  DESIGN.md  EXAMPLE_OUTPUT.md  Makefile  QUICKSTART.md  README.md  demo.sh  install.sh  package.json  tsconfig.json
assets/: tool-icons.example.json
rust/: Cargo.toml  main.rs  parser.rs  types.rs  ui.rs
src/: app.tsx  graph.rs  index.tsx  main.rs  parser.rs  ui.rs  watcher.rs  zoom.rs
src/components/: CommandInput.tsx  DetailsPanel.tsx  SessionList.tsx  StatusBar.tsx  Timeline.tsx  ToolPrompt.tsx
src/core/: graph.ts  parser.ts  stats.ts  types.ts  watcher.ts  zoom.ts
src/sdk/: claude.ts
src/sources/claude/: graph.ts  index.ts  parser.ts  watcher.ts
src/sources/multi/: index.ts
src/sources/opencode/: graph.ts  index.ts  reader.ts  server.ts
src/ui/: adapters.ts  tool-icons.ts
tests/: claude-graph.test.ts  opencode-graph.test.ts  stats.test.ts  tool-icons.test.ts  zoom.test.ts
